--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^4.24.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "resend": "^6.5.2",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.3.0",
