--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "next-auth": "^4.24.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-markdown": "^10.1.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^6.5.2",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
