--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.7.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
