--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.26",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.0",
     "next-auth": "^4.24.0",
