--- a/backend/env.example
+++ b/backend/env.example
@@ -33,3 +33,7 @@ TOKEN_SUBMIT_PROPOSAL_COST=100
 TOKEN_VIEW_PROPOSAL_COST=50
 TOKEN_NEW_USER_GIFT=1000
 
+# ==================== AI 服務設定 (Google Gemini) ====================
+# 取得 API Key: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
+
