add discount code

--- a/backend/env.example
+++ b/backend/env.example
@@ -33,6 +33,10 @@ TOKEN_SUBMIT_PROPOSAL_COST=100
 TOKEN_VIEW_PROPOSAL_COST=50
 TOKEN_NEW_USER_GIFT=1000
 
+# 折扣碼設定（格式：CODE1:折扣金額,CODE2:折扣金額）
+# 例如：WELCOME100:100,VIP500:500 表示 WELCOME100 折抵 100 元，VIP500 折抵 500 元
+DISCOUNT_CODES=WELCOME100:100,VIP500:500
+
 # ==================== AI 服務設定 (Google Gemini) ====================
 # 取得 API Key: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
