--- a/backend/env.example
+++ b/backend/env.example
@@ -41,3 +41,8 @@ DISCOUNT_CODES=WELCOME100:100,VIP500:500
 # 取得 API Key: https://makersuite.google.com/app/apikey
 GEMINI_API_KEY=your_gemini_api_key_here
 
+# ==================== Google OAuth 設定 ====================
+# 注意：Google OAuth 主要由前端 NextAuth 處理
+# 前端需要設定 GOOGLE_CLIENT_ID 和 GOOGLE_CLIENT_SECRET
+# 後端只需要接收來自 NextAuth 的請求
+
