--- a/.env.example
+++ b/.env.example
@@ -1,54 +1,29 @@
-# Database
-DATABASE_URL="postgresql://user:password@localhost:5432/200ok?schema=public"
+# ==================== 後端 API 設定 ====================
+# 後端 API 基礎 URL（開發環境預設為 http://localhost:8000）
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 
-# JWT
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
-JWT_ACCESS_TOKEN_EXPIRY="15m"
-JWT_REFRESH_TOKEN_EXPIRY="7d"
+# ==================== NextAuth 設定 ====================
+# NextAuth 密鑰（用於加密 session）
+# 生成方式：openssl rand -base64 32
+NEXTAUTH_SECRET=your_nextauth_secret_key_here
 
-# Google OAuth
-GOOGLE_CLIENT_ID="your-google-client-id"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# NextAuth URL（應用程式網址）
+NEXTAUTH_URL=http://localhost:3000
 
-# NextAuth
-NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-nextauth-secret-change-this-in-production"
+# ==================== Google OAuth 設定 ====================
+# Google OAuth Client ID 和 Secret
+# 取得方式：https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 
-# Cloud Storage (GCS or S3)
-CLOUD_STORAGE_BUCKET="your-bucket-name"
-CLOUD_STORAGE_PROJECT_ID="your-gcp-project-id"
-CLOUD_STORAGE_KEY_FILE="./service-account-key.json"
+# ==================== Supabase 設定（舊版，可能已棄用）====================
+# 如果使用 Supabase，請設定以下變數
+# 注意：目前專案主要使用 Cloud SQL，這些變數可能不再需要
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
-# AWS S3 (Alternative)
-AWS_REGION="ap-northeast-1"
-AWS_ACCESS_KEY_ID="your-aws-access-key"
-AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
-AWS_S3_BUCKET="your-s3-bucket"
-
-# SMS Verification (Twilio or similar)
-SMS_PROVIDER="twilio"
-TWILIO_ACCOUNT_SID="your-twilio-account-sid"
-TWILIO_AUTH_TOKEN="your-twilio-auth-token"
-TWILIO_PHONE_NUMBER="+1234567890"
-
-# Email (SendGrid or AWS SES)
-EMAIL_PROVIDER="sendgrid"
-SENDGRID_API_KEY="your-sendgrid-api-key"
-EMAIL_FROM="noreply@200ok.com"
-
-# Payment (Stripe or ECPay)
-STRIPE_SECRET_KEY="your-stripe-secret-key"
-STRIPE_PUBLISHABLE_KEY="your-stripe-publishable-key"
-STRIPE_WEBHOOK_SECRET="your-stripe-webhook-secret"
-
-# AI (OpenAI)
-OPENAI_API_KEY="your-openai-api-key"
-
-# App Config
-NODE_ENV="development"
-PORT=3000
-APP_URL="http://localhost:3000"
-
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# ==================== 折扣碼設定 ====================
+# 折扣碼設定（格式：CODE1:折扣金額,CODE2:折扣金額）
+# 例如：WELCOME100:100,VIP500:500
+NEXT_PUBLIC_DISCOUNT_CODES=WELCOME100:100,VIP500:500
